_sass/base.scss
@import "color-scheme";


/* Small devices (landscape phones, 576px and up) */
@media (min-width: 576px) { 

}

/* Medium devices (tablets, 768px and up) */
@media (min-width: 768px) { 

}

/* Large devices (desktops, 992px and up) */
@media (min-width: 992px) { 

}

/* Extra large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) { 

}

html{
    scroll-behavior: smooth;
}

body{
    font-family: 'Roboto Slab', serif;
    background: linear-gradient(180deg, #ffffff, #e2e1e2);
    color: rgb(51, 51, 51);
    -ms-overflow-style: none;  /* IE and Edge */
    scrollbar-width: none;  /* Firefox */
}

/* Hide scrollbar for Chrome, Safari and Opera */
body::-webkit-scrollbar {
    display: none;
  }
  
h1{
    font-size: 30px;
    margin: 5px 0;
    color: $base-color1;
    font-weight:400;
}

h2{
    font-size: 26px;
    margin: 5px 0;
    color: $base-color3; /*$base-color2;*/
    width: 50%;
}

h3{
    font-size: 22px;
    margin: 5px 0;
    color: $base-color1;
    font-weight: 200;
}

h4{
    font-size: 15px;
    margin: 5px 0;
    color: $base-color2; /*#696869;*/
    font-weight: 200;
    font-style: italic;
}

p{
    font-weight: 200;
    color: #696869;
}
/* ... */

